--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                       					  </ul>
                       					  
                       					  <div  class="book">                                  
-                      					<img src="BOOKS.png" alt="books">
+                      					<img src="books.png" alt="books">
                       					</div> 
                       					<div class="graduate-cap">
                       					<img src="graduate-cap.png" alt="books">
@@ -96,7 +96,7 @@
                       				<div class="Professional-content">
                       				<h3>PROFESSIONAL DETAILS</h3>
                       				<ul>
-                      				<li><img src="cognizant.png"></li>
+                      				<li><img src="Cognizant.png"></li>
                       				<li>Programmar Analyst<br />
                       				     COGNIZANT TECHNOLOGIES</li>
                       				 <li> |</li>
@@ -200,7 +200,7 @@
 			     Reading Novels</li>
 			<li><img src="music.png"><br />
 			     Listening Songs</li>
-		    <li><img src="Programing.png"><br />
+		    <li><img src="programing.png"><br />
 			     Programming</li>
 			<li><img src="video-player.png"><br />
 			     Watching Movie</li>
