--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script  src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	<script  src="jquery.lineProgressbar.js"></script>
 </head>
-<body onload="move()">
+<body>
 	<section class="header">
 	<div class="container">
 	<!-- <div class="header-content">
@@ -85,6 +85,24 @@
                       					<img src="graduate-cap.png" alt="books">
                       					</div> 
                       					</div>
+							 <div class="education-content1">
+                                                         <h3>EDUCATIONAL DETAILS</h3>
+                                <ul>
+                                     <li><img src="school-campus.png">GIACR COLLEGE<br />
+                                                            <span>B.E in Electrical and Electronics</span><br />
+                                                             <span>2012-2016</span></li>
+                                <li><img src="school-campus-copy.png">Laxmipat Singhania Public School<br />
+                                                                <span>Intermidiate in Scinece<br /></span>
+                                                                <span>2010-2012</span></li>
+                                  </ul>
+                                  
+                                  <div  class="book">                                  
+                                <img src="BOOKS.png" alt="books">
+                                </div> 
+                                <div class="graduate-cap">
+                                <img src="graduate-cap.png" alt="books">
+                                </div> 
+                                </div>
                       				</div>
                       			</div>
                       		</div>
