--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
                                                          <h3>EDUCATIONAL DETAILS</h3>
                                 <ul>
                                      <li><img src="school-campus.png">GIACR COLLEGE<br />
-                                                            <span>B.E in Electrical and Electronics</span><br />
-                                                             <span>2012-2016</span></li>
+                                                                     <span>B.E in Electrical and Electronics</span><br />
+                                                                      <span>2012-2016</span></li>
                                 <li><img src="school-campus-copy.png">Laxmipat Singhania Public School<br />
                                                                 <span>Intermidiate in Scinece<br /></span>
                                                                 <span>2010-2012</span></li>
                                   </ul>
                                   
                                   <div  class="book">                                  
-                                <img src="BOOKS.png" alt="books">
+                                <img src="books.png" alt="books">
                                 </div> 
                                 <div class="graduate-cap">
                                 <img src="graduate-cap.png" alt="books">
