--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                                          <h3>EDUCATIONAL DETAILS</h3>
                                 <ul>
                                      <li><img src="school-campus.png">GIACR COLLEGE<br />
-                                                                     <span>B.E in Electrical and Electronics</span><br />
+                                                                     <span>B.E in EEE</span><br />
                                                                       <span>2012-2016</span></li>
                                 <li><img src="school-campus-copy.png">Laxmipat Singhania Public School<br />
                                                                 <span>Intermidiate in Scinece<br /></span>
